@@ -1,7 +1,7 @@
 dnl# $Id$
 
 AC_PREREQ(2.59)
-AC_INIT([warewulf-nhc], [1.2], [warewulf-devel@lbl.gov])
+AC_INIT([warewulf-nhc], [1.2.1], [warewulf-devel@lbl.gov])
 AC_CONFIG_SRCDIR([.])
 
 AC_PROG_INSTALL
